feat: utils and fix swagger
